# ChessScope

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 404.html  index.html  sitemap.txt  sitemap.xml
docs/assets/: index--gUvvX_7.js  index-09XyiM90.css  index-19-OL8S_.js  index-2BVRpyJJ.css  index-50wJ4LeF.js  index-B7yEv5Uo.js  index-B9tWA4d0.js  index-BI-qTtIG.css  index-BNlvzv5y.css  index-BbH2Aa6I.js  index-BfVC46hL.js  index-CzL4OhfG.js  index-DFhLy0hx.css  index-DHAshM9O.js  index-DZg-4n2t.js  index-DbbKYbYr.js  index-DdAkPF2s.js  index-DevVlPXa.css  index-xNWi4M1N.css  transformers.web-CW-Dkacq.js
docs/help/: index.html
public/: robots.txt  sitemap.txt
scripts/: copy-spa-404.mjs  copy-stockfish.mjs  dev.ps1  download-stockfish.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/analysis/: engine.rs  mod.rs  pgn.rs
src-tauri/src/coach/: mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/import/: chesscom.rs  lichess.rs  mod.rs  pgn_meta.rs  uscf.rs
src-tauri/src/scout/: chesscom.rs  chessgames.rs  dossier.rs  fide.rs  lichess.rs  mod.rs
src/components/: ChessBoard.tsx  Layout.tsx  ThemeProvider.tsx  UscfRatingChart.tsx  WelcomeModal.tsx  ui.tsx
src/lib/: analysis-progress.ts  api.ts  chess.ts  ollama-client.ts  repair-scout-games.ts  tauri-api.ts  tauri.ts  theme.ts  types.ts  uscf-ai.ts  uscf-history.ts  uscf-suggestions.ts  utils.ts  web-llm-client.ts
src/pages/: Analysis.tsx  Coach.tsx  Dashboard.tsx  (+5 more)
(+7 files in other folders)
